@@ -9,5 +9,9 @@ FROM openjdk:11.0.3-jdk-slim
 WORKDIR /voovan
 COPY --from=maven /voovan/target/voovan-bench-0.1-jar-with-dependencies.jar app.jar
 COPY --from=maven /voovan/config/framework.properties config/framework.properties
-#CMD ["java", "-server", "-Xms5g", "-Xmx5g", "--illegal-access=warn", "-XX:-RestrictContended", "-XX:+UseParallelGC", "-XX:+UseNUMA", "-cp", "./config:voovan.jar:app.jar", "org.voovan.VoovanTFB"]
-CMD ["java", "-server", "-Xms5g", "-Xmx5g", "-XX:-RestrictContended", "-XX:+UseParallelGC", "-XX:+UseNUMA", "-cp", "./config:voovan.jar:app.jar", "org.voovan.VoovanTFB"]
+CMD java -DCheckReadTimeout=false -DThreadBufferPoolSize=1024 -DAsyncSend=false -DByteBufferAnalysis=-1\
+    -server -Xms2g -Xmx2g \
+    -XX:-RestrictContended \
+    -XX:+UseParallelGC -XX:+UseNUMA \
+    -XX:+AggressiveOpts -XX:+UseBiasedLocking \
+    -cp ./config:voovan.jar:app.jar org.voovan.VoovanTFB
